--- a/api/vercel.json
+++ b/api/vercel.json
@@ -1,9 +1,8 @@
 {
-    "functions": {
-      "api/**/*.js": {
-        "runtime": "nodejs14.x",
-        "includeFiles": "api/**/*.js"
-      }
+  "routes": [
+    {
+      "src": "/api/(.*)",
+      "dest": "api/server.js"
     }
-  }
-  
+  ]
+}
